--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://mysqldbinstance.cwcmsjypxwo0.us-east-2.rds.amazonaws.com:3306/hotel_db
 spring.datasource.username=admin
-spring.datasource.password=Frisco15!
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
