--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+   			 <groupId>org.apache.maven.plugins</groupId>
+    		 <artifactId>maven-resources-plugin</artifactId>
+    		 <version>3.2.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -60,6 +66,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
 		</plugins>
 	</build>
 
